--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Oxygen:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -243,10 +244,6 @@ html {
   color: #878787;
 }
 
-
-
-
-
 .aboutme-page-section {
   height: 100vh;
   width: 100%;
@@ -256,8 +253,8 @@ html {
   font-family: "Oxygen", sans-serif;
 }
 
-
-.container-aboutme{
+.container-aboutme {
+  
   margin-top: 18.5vh;
   margin-left: 12.5%;
   overflow: hidden;
@@ -268,33 +265,76 @@ html {
   margin-bottom: 50vh;
   font-weight: bold;
   display: flex;
+  justify-content: space-around;
 }
 
 .aboutme-picture {
   z-index: 10;
   max-width: fit-content;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 5%;
+  width: 35%;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .aboutme-picture img {
-
   width: 70%;
-  border-radius: 50%; 
-  transition: ease-in-out 1s; 
-  filter:blur(.5px) ;
+  border-radius: 50%;
+  transition: ease-in-out 1s;
+  filter: blur(0.5px);
   box-shadow: 0px 0px 15px 15px rgba(121, 121, 121, 0.2);
-
 }
 
-.aboutme-picture img:hover{
+.aboutme-picture img:hover {
   width: 72.5%;
-  translate: -2.5%;
-  filter:blur(0px) ;
-  box-shadow: 0px 0px 10px 10px rgba(169, 169, 169, 0.312);
 
+  filter: blur(0px);
+  box-shadow: 0px 0px 10px 10px rgba(169, 169, 169, 0.312);
 }
+.aboutme-description {
+  display: flex;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-items: center;
+  width: 20%;
+  height: 40vh;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  font-family: "Oswald", sans-serif;
+  font-family: "Oxygen", sans-serif;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  color: transparent;
+  -webkit-text-stroke: 0.01em white;
+  transition: -webkit-text-stroke 0.5s ease, 1s;
+}
+.swiper-slide p:hover {
+  -webkit-text-stroke: none;
+  color: white;
+  transition: ease-in-out .5s;
+}
+
+.swiper-slide:nth-child(1n) {
+  background-color: rgb(10, 10, 10);
+}
+
+.swiper-slide:nth-child(2n) {
+  background-color: rgb(60, 60, 60);
+  
+}
+
 
 /* Responsive */
 @media screen and (max-width: 4500px) {
@@ -378,6 +418,18 @@ html {
   }
   .skills-code-project2 p {
     font-size: xx-small;
+  }
+  .container-aboutme{
+    flex-direction: column;
+    align-items: center;
+  }
+  .aboutme-picture {
+    width: 50%;
+  }
+  .aboutme-description {
+    width: 40%;
+    font-size: 15px;
+
   }
 }
 @media screen and (max-width: 650px) {
