--- a/src/style.css
+++ b/src/style.css
@@ -205,24 +205,52 @@ html {
   height: 4vh;
   padding: 10px;
   font-weight: 600;
-  display: flex;
-  flex-direction: row;
 }
 
 .skills-code-project {
-  display: flex;
-  align-items: center;
+  position: absolute;
   height: auto;
   margin-top: 2%;
   padding: 0.1rem 1rem;
   border-radius: 10px;
   background: #878787;
-  margin-right: 2%;
-  font-size: small;
 }
 
 .skills-code-project p {
   font-size: small;
+  display: flex;
+  align-items: center;
+}
+
+.skills-code-project1 {
+  position: absolute;
+  height: auto;
+  margin-top: 2%;
+  padding: 0.1rem 1rem;
+  border-radius: 10px;
+  background: #878787;
+}
+
+.skills-code-project1 p {
+  font-size: small;
+  display: flex;
+  align-items: center;
+}
+
+.skills-code-project2 {
+  position: absolute;
+  height: auto;
+  margin-top: 2%;
+  padding: 0.1rem 1rem;
+  border-radius: 10px;
+  background: #878787;
+  margin-left: 30%;
+}
+
+.skills-code-project2 p {
+  font-size: small;
+  display: flex;
+  align-items: center;
 }
 
 .projet-description {
@@ -474,13 +502,4 @@ html {
 ::-webkit-scrollbar-thumb {
   background: rgb(105, 105, 105);
   border-radius: 10px;
-}
-::-moz-selection { /* Code for Firefox */
-  color: black;
-  background: white;
-}
-
-::selection {
-  color: black;
-  background: white;
 }
