--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,7 @@ html {
   position: fixed;
   margin-top: 90vh;
   border-radius: 10px;
+  z-index: 10;
 }
 
 .container-social-icon .social-media-icon {
@@ -207,7 +208,6 @@ html {
 
 .skills-project {
   width: 100%;
-  height: 4vh;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -282,10 +282,11 @@ html {
 }
 
 .aboutme-picture {
-  margin-left: -12.5%;;
+  margin-left: -12.5%;
+  /* background-color: #FBF9FF; */
   z-index: 10;
-  max-width: fit-content;
-  width: 35%;
+  /* max-width: fit-content; */
+  width: 40%;
   height: 60vh;
   display: flex;
   justify-content:center;
@@ -294,6 +295,7 @@ html {
 }
 
 .aboutme-picture img {
+    
   width: 70%;
   border-radius: 50%;
   transition: ease-in-out 1s;
@@ -305,7 +307,7 @@ html {
   width: 72.5%;
   filter: blur(0px);
   box-shadow: 0px 0px 10px 10px rgba(169, 169, 169, 0.312);
-}
+} 
 
 .aboutme-description {
   display: flex;
