--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Oxygen:wght@400;700&display=swap");
 
-element{
-  --color1 : #000807 ; 
-  --color2 : #A2A3BB;
-  --color3 : #9395D3 ;
-  --color4 : #B3B7EE ;
-  --color5 : #FBF9FF ;
-
+element {
+  --color1: #000807;
+  --color2: #a2a3bb;
+  --color3: #9395d3;
+  --color4: #b3b7ee;
+  --color5: #fbf9ff;
 }
 
 * {
@@ -39,7 +38,7 @@ html {
 
 .nav .wrapper a {
   float: left;
-  color: #FBF9FF;
+  color: #fbf9ff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -51,7 +50,7 @@ html {
 }
 
 .nav .wrapper a:hover {
-  color: #A2A3BB;
+  color: #a2a3bb;
   transition: 0.5s;
 }
 
@@ -61,9 +60,9 @@ html {
   display: flex;
   justify-content: center;
   top: 37%;
-  left: 50%;
+  left: 49.5%;
   transform: translate(-50%, -50%);
-  color: #9395D3;
+  color: #9395d3;
 }
 
 .nav .wrapper .navbar-left {
@@ -94,7 +93,7 @@ html {
   padding: 0.5vh;
   opacity: 2;
   cursor: pointer;
-  color: #FBF9FF;
+  color: #fbf9ff;
   transition: 0.5s;
   padding: 10px;
 }
@@ -102,7 +101,7 @@ html {
 .container-social-icon .social-media-icon i:hover {
   opacity: 2;
   cursor: pointer;
-  color: #A2A3BB;
+  color: #a2a3bb;
   transition: 0.5s;
 }
 
@@ -123,19 +122,66 @@ html {
 }
 
 .home-page-section .text-presentation p:active {
-  color: #A2A3BB;
+  color: #a2a3bb;
 }
 
 .home-page-section .text-presentation .multiText {
-  color: #9395D3;
+  color: #9395d3;
 }
 
 .home-page-section .text-presentation .text-presentation-wout-anim {
-  color: #FBF9FF;
+  color: #fbf9ff;
 }
 
 .work {
   top: 125vh;
+}
+
+.repo-page-section {
+  height: 100vh;
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  font-family: "Oxygen", sans-serif;
+}
+
+.repo-container {
+  margin-top: 30vh;
+  margin-left: 20.25%;
+  width: 65%;
+  height: 35vh;
+  margin-bottom: 50vh;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 50%);
+  grid-template-rows: repeat(2, 25vh);
+}
+.repository {
+  /* rectangle*/
+  background-color: transparent;
+  color: #fbf9ff;
+  border-style: groove;
+  border-radius: 10px;
+
+  margin: 10px;
+  padding: 10px;
+  width: 75%;
+  height: 60%;
+  overflow: hidden;
+}
+
+.status-repo {
+  margin-left: 1%;
+  font-size: x-small;
+  border: #fbf9ff;
+  border-radius: 10px;
+  border-style: dotted;
+  padding: 2.5px 10px 2.5px 10px;
+}
+
+.repo-description {
+  font-size: x-small;
+  padding: 10px 0px 10px 0px;
 }
 
 .work-page-section {
@@ -152,12 +198,11 @@ html {
   overflow: hidden;
   width: 65%;
   height: 65vh;
-  background-color: #FBF9FF;
+  background-color: #fbf9ff;
   border-radius: 0 10px 10px 0;
   margin-bottom: 50vh;
   font-weight: bold;
   box-shadow: rgba(47, 47, 47, 0.2) 0px 7px 29px 0px;
-  
 }
 
 .image-work {
@@ -180,10 +225,9 @@ html {
   height: 70vh;
   object-fit: cover;
 }
-.image-work img{
+.image-work img {
   object-fit: cover;
   transition: 1s;
-
 }
 .image-work img {
   object-fit: cover;
@@ -195,8 +239,7 @@ html {
   transition: 1s;
   width: 90%;
   height: 65vh;
-  border : none
-
+  border: none;
 }
 
 .image-work img:hover {
@@ -234,9 +277,9 @@ html {
   align-items: center;
   height: auto;
   margin-top: 2%;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 10px;
-  background: #A2A3BB;
+  background: #a2a3bb;
   margin-right: 2%;
   font-size: x-small;
 }
@@ -245,29 +288,27 @@ html {
   align-items: center;
   height: auto;
   margin-top: 2%;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 10px;
-  background: #B3B7EE;
+  background: #b3b7ee;
   color: white;
   margin-right: 2%;
   font-size: x-small;
 }
 
-
 .projet-description {
   display: flex;
-  
+
   margin-left: 5%;
   position: absolute;
   width: 85%;
   height: 75%;
   font-size: medium;
   font-weight: 400;
-  
 }
 
 .projet-description p {
-  color: #A2A3BB;
+  color: #a2a3bb;
 }
 
 .aboutme-page-section {
@@ -280,7 +321,6 @@ html {
 }
 
 .container-aboutme {
-
   margin-top: 18.5vh;
   overflow: hidden;
   margin-left: 12.5%;
@@ -293,7 +333,6 @@ html {
   display: flex;
   justify-content: space-around;
   /* background-color: #878787; */
-
 }
 
 .aboutme-picture {
@@ -304,18 +343,16 @@ html {
   width: 40%;
   height: 60vh;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   /* opacity: 0;
   transform:translateX(-100%) ; */
-
 }
 .aboutme-picture.acitve {
   opacity: 1;
   transform: translateX(0%);
 }
-.aboutme-picture img { 
-    
+.aboutme-picture img {
   width: 70%;
   border-radius: 50%;
   transition: ease-in-out 1s;
@@ -327,7 +364,7 @@ html {
   width: 72.5%;
   filter: blur(0px);
   box-shadow: 0px 0px 10px 10px rgba(169, 169, 169, 0.312);
-} 
+}
 
 .aboutme-description {
   display: flex;
@@ -336,7 +373,6 @@ html {
   align-items: center;
   width: 20%;
   height: 40vh;
-
 }
 .swiper {
   width: 100%;
@@ -346,7 +382,7 @@ html {
 .swiper-slide {
   text-align: center;
   font-size: small;
-  background: transparent ;
+  background: transparent;
   border-radius: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -361,26 +397,17 @@ html {
   -webkit-align-items: center;
   align-items: center;
   overflow: hidden;
-  color: #FBF9FF;
+  color: #fbf9ff;
 }
 
-.swiper-slide img{
+.swiper-slide img {
   width: 60%;
-  display:inline-block;
+  display: inline-block;
   vertical-align: middle;
   overflow: hidden;
   object-fit: cover;
   margin-top: 15%;
 }
-
-
-
-
-
-
-
-
-
 
 /* Responsive */
 @media screen and (max-width: 4500px) {
@@ -421,13 +448,20 @@ html {
   .projet-description {
     font-size: small;
   }
+  .repo-container {
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+    margin-top: 20%;
+  }
+  .status-repo {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 900px) {
-  .aboutme-picture img { 
-  
+  .aboutme-picture img {
     filter: blur(0px);
-
   }
   .container-work {
     background-color: transparent;
@@ -490,23 +524,20 @@ html {
 
   .aboutme-picture {
     width: 50%;
-    margin-left:1%;
+    margin-left: 1%;
   }
 
   .aboutme-description {
     width: 40%;
     font-size: 15px;
-
   }
 }
 
 @media screen and (max-width: 650px) {
-  .skills-code-project-working{
+  .skills-code-project-working {
     display: none;
   }
 }
-
-
 
 /* width */
 ::-webkit-scrollbar {
@@ -523,7 +554,8 @@ html {
   background: rgb(105, 105, 105);
   border-radius: 10px;
 }
-::-moz-selection { /* Code for Firefox */
+::-moz-selection {
+  /* Code for Firefox */
   color: black;
   background: white;
 }
