--- a/src/style.css
+++ b/src/style.css
@@ -29,8 +29,8 @@ html {
 }
 a {
   text-decoration: none;
-  color: #fbf9ff;
-
+  color: #000807;
+  font-style: bold;
 }
 
 .nav .wrapper {
@@ -156,27 +156,25 @@ a {
   align-items: center;
   width: 65%;
   height: 50vh;
-  overflow: hidden;
   grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(2, 25vh);
 }
-.repository {  
+.repository {
+  z-index: 1;
   margin-left: 8%;
-  background-color: transparent;
-  color: #fbf9ff;
-  border-style: groove;
+  background-color: white;
+  color: #000807;
   border-radius: 10px;
   padding: 10px;
   width: 75%;
-  height: 60%;
-  overflow: hidden;
+  height: fit-content;
+  box-shadow: #fbf9ffc5 0px 0px 20px 0px;
 }
-
 
 .status-repo {
   margin-left: 1%;
   font-size: x-small;
-  border: #fbf9ff;
+  border: 2px solid #000807;
   border-radius: 10px;
   border-style: dotted;
   padding: 2.5px 10px 2.5px 10px;
@@ -202,7 +200,7 @@ a {
   width: 65%;
   height: 65vh;
   background-color: #fbf9ff;
-  border-radius: 0 10px 10px 0;
+  border-radius: 10px 10px 10px 10px;
   margin-bottom: 50vh;
   font-weight: bold;
   box-shadow: rgba(47, 47, 47, 0.2) 0px 7px 29px 0px;
@@ -221,6 +219,7 @@ a {
   width: 50%;
   height: 65vh;
   overflow: hidden;
+
 }
 
 .video-work video {
@@ -422,23 +421,12 @@ a {
   .skills-project p {
     font-size: 17.5px;
   }
-  .repository {  
+  .repository {
     margin-left: 20%;
     width: 55%;
-    height: 30%;
-    overflow: hidden;
+    height: fit-content;
   }
-  
-  
-  .status-repo {
-    margin-left: 1%;
-    font-size: x-small;
-    border: #fbf9ff;
-    border-radius: 10px;
-    border-style: dotted;
-    padding: 2.5px 10px 2.5px 10px;
-  }
-  
+
   .repo-description {
     font-size: small;
     padding: 10px 0px 10px 0px;
@@ -449,22 +437,11 @@ a {
   .skills-project p {
     font-size: 17.5px;
   }
-  .repository {  
-    
+  .repository {
+    height: fit-content;
     height: 30%;
-    overflow: hidden;
   }
-  
-  
-  .status-repo {
-    margin-left: 1%;
-    font-size: x-small;
-    border: #fbf9ff;
-    border-radius: 10px;
-    border-style: dotted;
-    padding: 2.5px 10px 2.5px 10px;
-  }
-  
+
   .repo-description {
     font-size: small;
     padding: 10px 0px 10px 0px;
@@ -479,28 +456,16 @@ a {
   .skills-code-project2 {
     margin-left: 40%;
   }
-  .repository {  
+  .repository {
     margin-left: 10%;
     width: 75%;
-    height: 35%;
-    overflow: hidden;
+    height: fit-content;
   }
-  
-  
-  .status-repo {
-    margin-left: 1%;
-    font-size: x-small;
-    border: #fbf9ff;
-    border-radius: 10px;
-    border-style: dotted;
-    padding: 2.5px 10px 2.5px 10px;
-  }
-  
+
   .repo-description {
     font-size: small;
     padding: 10px 0px 10px 0px;
   }
-  
 }
 
 @media screen and (max-width: 1200px) {
@@ -518,22 +483,16 @@ a {
     display: flex;
     flex-direction: column;
     height: 70vh;
-    margin-top: 10%;
-    
   }
   .status-repo {
     display: none;
   }
-  .repository { 
-    margin-bottom: 10%; 
+  .repository {
+    margin-bottom: 5%;
     margin-left: 2%;
     width: 55%;
-    height: 10%;
-    overflow: hidden;
+    height: fit-content;
   }
-  
-  
-  
 }
 
 @media screen and (max-width: 900px) {
@@ -546,9 +505,6 @@ a {
 
   .video-work {
     width: 72.5%;
-  }
-
-  .video-work video {
     border-radius: 10px;
   }
 
@@ -600,8 +556,11 @@ a {
   }
 
   .aboutme-picture {
-    width: 50%;
+    width: 30%;
     margin-left: 1%;
+  }
+  .swiper {
+    width: 60%;
   }
 
   .aboutme-description {
@@ -610,15 +569,13 @@ a {
   }
   .repo-container {
     height: 70vh;
-    margin-top: 10%;
-    
+    margin-top: -15%;
   }
 
-  .repository { 
-    margin-bottom: 15%; 
-    height: 15%;
+  .repository {
+    margin-bottom: 15%;
+    height: fit-content;
   }
-
 }
 
 @media screen and (max-width: 650px) {
@@ -626,13 +583,23 @@ a {
     display: none;
   }
   .repo-container {
-    margin-top: 0;
-    
+    margin-top: -40%;
   }
-  .repository { 
-    margin-bottom: 15%; 
-    width: 60%;
-    height: 15%;
+  .repository {
+    margin-bottom: 10%;
+    width: 100%;
+    height: fit-content;
+  }
+
+  .video-work video{
+    border-radius: 10px 10px 10px 10px;
+  }
+  .aboutme-picture {
+    width: 50%;
+    margin-left: 1%;
+  }
+  .swiper {
+    width: 100%;
   }
 }
 
