--- a/src/style.css
+++ b/src/style.css
@@ -203,7 +203,6 @@ a {
   border-radius: 10px 10px 10px 10px;
   margin-bottom: 50vh;
   font-weight: bold;
-  box-shadow: rgba(47, 47, 47, 0.2) 0px 7px 29px 0px;
 }
 
 .image-work {
@@ -219,7 +218,6 @@ a {
   width: 50%;
   height: 65vh;
   overflow: hidden;
-
 }
 
 .video-work video {
@@ -242,6 +240,7 @@ a {
   width: 90%;
   height: 65vh;
   border: none;
+  border-radius: 10px;
 }
 
 .image-work img:hover {
@@ -591,7 +590,7 @@ a {
     height: fit-content;
   }
 
-  .video-work video{
+  .video-work video {
     border-radius: 10px 10px 10px 10px;
   }
   .aboutme-picture {
